<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".Activities.PrivacyPolicyActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/colorRed"
        android:layout_height="55dp"
        >
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:padding="3dp"
                android:layout_gravity="left|center"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                android:textColor="@color/colorWhite"
                android:layout_gravity="center"/>
        </FrameLayout>
    </LinearLayout>
    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <TextView
                android:textColor="@color/colorBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/privacy_policy"
                android:textSize="16sp"
                android:paddingRight="10dp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:id="@+id/privacy1"
                android:paddingTop="0dp"
                android:paddingLeft="0dp"
                android:paddingRight="10dp"
                android:textColor="@color/colorBlack"
                android:justificationMode="inter_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_about_us"
                android:textSize="11sp"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:paddingLeft="0dp"
                android:paddingRight="10dp"
                android:textColor="@color/colorBlack"
                android:justificationMode="inter_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/concerned_about_privacy_we_are_too"
                android:textSize="11sp"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:id="@+id/tv_privacy3"
                android:paddingLeft="0dp"
                android:paddingRight="10dp"
                android:textColor="@color/colorBlack"
                android:paddingBottom="0dp"
                android:justificationMode="inter_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pra_3"
                android:textSize="11sp"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:id="@+id/privacy3"
                android:paddingLeft="0dp"
                android:paddingRight="10dp"
                android:textColor="@color/colorBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pra_4"
                android:textSize="11sp"
                android:justificationMode="inter_word"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
