<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    tools:context=".Activities.ContactUsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@color/colorRed"
            >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_back"
                    android:layout_gravity="left"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:layout_marginLeft="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_us"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:layout_marginTop="25dp"
                    android:layout_gravity="center|top"/>
            </FrameLayout>
        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="-60dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            app:cardCornerRadius="15dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:orientation="vertical">

                <EditText
                    android:drawableLeft="@drawable/ic_person"
                    android:id="@+id/et_name"
                    android:textSize="16sp"
                    android:gravity="center|left"
                    android:textColor="@color/textColor"
                    android:drawablePadding="10dp"
                    android:layout_marginTop="35dp"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:hint="@string/enter_your_name"
                    android:background="@drawable/bg_search"
                    android:layout_height="50dp"/>
                <EditText
                    android:drawablePadding="10dp"
                    android:drawableLeft="@drawable/ic_phone"
                    android:id="@+id/et_phone"
                    android:editable="false"
                    android:gravity="center|left"
                    android:layout_marginTop="25dp"
                    android:textSize="16sp"
                    android:textColor="@color/textColor"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:hint="@string/enter_phone_number"
                    android:background="@drawable/bg_search"
                    android:layout_height="50dp"/>
                <EditText
                    android:drawableLeft="@drawable/ic_email"
                    android:id="@+id/et_email"
                    android:drawablePadding="10dp"
                    android:layout_marginTop="25dp"
                    android:textSize="16sp"
                    android:gravity="center|left"
                    android:textColor="@color/textColor"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:hint="@string/enter_your_email"
                    android:background="@drawable/bg_search"
                    android:layout_height="50dp"/>
                <EditText
                    android:id="@+id/et_messege"
                    android:drawablePadding="10dp"
                    android:layout_marginTop="25dp"
                    android:paddingLeft="15dp"
                    android:singleLine="true"
                    android:textSize="16sp"
                    android:textColor="@color/textColor"
                    android:gravity="top"
                    android:paddingRight="5dp"
                    android:paddingTop="5dp"
                    android:layout_width="match_parent"
                    android:hint="@string/enter_your_msg_here"
                    android:background="@drawable/bg_search"
                    android:layout_height="100dp"/>

                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="70dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/send"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/bg_btn"
                    />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</ScrollView>