<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.AboutUsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/colorRed"
        android:layout_height="55dp"
        >
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:padding="3dp"
                android:layout_gravity="left|center"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_us"
                android:textColor="@color/colorWhite"
                android:layout_gravity="center"/>
        </FrameLayout>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="10"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/ivson"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="2"
                    android:scaleType="fitXY"
                    android:background="@drawable/son"/>
                <TextView
                    android:justificationMode="inter_word"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textSize="11sp"
                    android:layout_width="0dp"
                    android:textColor="@color/colorBlack"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/about1"
                    />
                <ImageView
                    android:id="@+id/ivmother"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="2"
                    android:scaleType="fitXY"
                    android:background="@drawable/mother"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/tv_para2"
                android:padding="10dp"
                android:justificationMode="inter_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:layout_gravity="center_horizontal|end"
                android:textColor="@color/colorBlack"
                android:text="@string/aboutpara2"/>
            <TextView
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:justificationMode="inter_word"
                android:textColor="@color/colorBlack"
                android:textSize="11sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_para3"/>
        </LinearLayout>

    </ScrollView>


</LinearLayout>