<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context=".Activities.VerifyCodeActivity">
    <com.google.android.material.circularreveal.CircularRevealLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@color/colorRed"
            >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_back"
                    android:layout_gravity="left"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:layout_marginLeft="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center"
                    android:text="@string/phone_number_verification"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:layout_marginTop="25dp"/>
            </FrameLayout>
        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="-60dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            app:cardCornerRadius="15dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/logo"
                    />
                <com.chaos.view.PinView
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_marginTop="40dp"
                    android:layout_gravity="center"
                    android:id="@+id/firstPinView"
                    style="@style/PinWidget.PinView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:cursorVisible="true"
                    android:inputType="text"
                    android:textSize="16sp"
                    android:textColor="@color/textColor"
                    android:padding="10dp"
                    android:textStyle="bold"
                    app:cursorColor="@color/colorRed"
                    app:cursorWidth="2dp"
                    app:itemCount="6"
                    app:itemHeight="48dp"
                    app:itemRadius="4dp"
                    app:itemSpacing="0dp"
                    app:itemWidth="38dp"
                    app:lineColor="#504E4E"
                    app:lineWidth="1.5dp"
                    app:viewType="rectangle" />
                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/verify"
                    android:layout_marginBottom="20dp"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/bg_btn"
                    />
                <TextView
                    android:layout_marginBottom="30dp"
                    android:textSize="13sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/if_you_do_not_receive_a_message_with_an_activation_code_please_restart_your_phone"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </com.google.android.material.circularreveal.CircularRevealLinearLayout>

</ScrollView>